Bug 387297 - conditional expression is constant warning for Project.cpp
Summary: conditional expression is constant warning for Project.cpp
Status: RESOLVED FIXED
Alias: None
Product: LabPlot2
Classification: Applications
Component: backend (other bugs)
Version First Reported In: latest
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-11-25 15:13 UTC by uwestoehr
Modified: 2017-11-25 21:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description uwestoehr 2017-11-25 15:13:13 UTC
I get:

1>C:\CraftRoot\labplot\src\backend\core\Project.cpp(161): warning C4127: conditional expression is constant
Comment 1 Alexander Semke 2017-11-25 21:35:20 UTC
Git commit 8840b18a5a6c62ff84c973cfa04d323c565d7a15 by Alexander Semke.
Committed on 25/11/2017 at 21:34.
Pushed by asemke into branch 'master'.

Removed unneeded assert in Project.cpp.
FIXED-IN: 2.5

M  +0    -1    src/backend/core/Project.cpp

https://commits.kde.org/labplot/8840b18a5a6c62ff84c973cfa04d323c565d7a15