Removed unneeded assert in Project.cpp.

BUG:387297
FIXED-IN: 2.5